# CliMate

./: .gitignore  Cargo.toml  README.md
docs/: app-server.md
ios/: README.md
ios/CliMateApp/: project.yml
ios/CliMateApp/Resources/: Info.plist
ios/CliMateApp/Sources/: AppLog.swift  AppSettings.swift  CliMateApp.swift  CodexClient.swift  EmbeddedTailscale.swift  Keychain.swift  LogsView.swift  RootView.swift  SOCKS5HTTPClient.swift  SettingsView.swift  TailnetDirectory.swift  TerminalView.swift
ios/CliMateApp/Tests/: CodexClientRegressionTests.swift
ios/CliMateApp/scripts/: bootstrap-tailscale-kit.sh  run-device.sh
scripts/: test-embedded-server.sh
server/: go.mod  go.sum
server/cmd/climate-server/: main.go
server/config/: config.example.yaml
server/internal/app/: app.go
server/internal/codex/: session.go
server/internal/config/: config.go
server/internal/events/: hub.go  hub_test.go
server/internal/httpx/: httpx.go  httpx_rpc_integration_test.go  httpx_sse_test.go
server/internal/identity/: identity.go  identity_test.go
server/internal/tailnet/: tsnet.go
src/: main.rs  tailscale.rs
